--- a/style.css
+++ b/style.css
@@ -62,3 +62,17 @@ a:hover {
   a.primary:hover {
       color: #5b3054;
   }
+
+
+
+  @media screen and (max-width: 700px) {
+      .container h1 {
+          font-size: 2.5em;
+      }
+      h2 {
+          font-size: 1.5em;
+      }
+      .container p {
+          font-size: 1.25em;
+      }
+  }
